sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:3: error: '<-' expected but ')' found.
  for (i in num){
               ^AlgBubbleSort1:6: error: illegal start of simple expression
} 
^