sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  for (i in num){
    
  }
}